--- a/module-repository/src/main/resources/hibernate.properties
+++ b/module-repository/src/main/resources/hibernate.properties
@@ -1,10 +1,13 @@
 # Echo all executed SQL to console
-hibernate.show_sql=true
-hibernate.format_sql=true
-hibernate.highlight_sql=true
+#hibernate.show_sql=true
+#hibernate.format_sql=true
+#hibernate.highlight_sql=true
 
 # Other
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create-drop
+#hibernate.hbm2ddl.auto=none
 hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#spring.jpa.generate-ddl=true
+
 
