revise implementation of repositories

--- a/module-repository/src/main/resources/hibernate.properties
+++ b/module-repository/src/main/resources/hibernate.properties
@@ -5,7 +5,7 @@
 
 # Other
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-#hibernate.hbm2ddl.auto=none
+hibernate.hbm2ddl.auto=create
 hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #spring.jpa.generate-ddl=true
