--- a/module-service/build.gradle
+++ b/module-service/build.gradle
@@ -2,4 +2,5 @@ dependencies {
     implementation project(':module-repository')
     implementation("org.projectlombok:lombok:1.18.28")
     annotationProcessor("org.projectlombok:lombok:1.18.28")
+    annotationProcessor("org.projectlombok:lombok-mapstruct-binding:0.2.0")
 }
